<resources>
    <string name="app_name">StarlightReader</string>
    <string name="settings">设置</string>
    <string name="font_size">字号</string>
    <string name="font_color">文字颜色</string>
    <string name="custom">自定义</string>
    <string name="white">白色</string>
    <string name="black">黑色</string>
    <string name="gray">灰色</string>
    <string name="pink">粉色</string>
    <string name="background">背景</string>
    <string name="txt_charset">文本编码</string>
    <string name="charset_utf_8">UTF-8</string>
    <string name="charset_gbk">GBK</string>
    <string name="chapter_list">章节列表</string>
    <string name="chapter_list_number">章节列表（共%d章）</string>
    <string name="catalog">目录</string>
    <string name="options">选项</string>
    <string name="brightness">亮度</string>
    <string name="font">字体</string>
    <string name="smaller">小</string>
    <string name="big">大</string>
    <string name="change_font">更改字体</string>
    <string name="font_complex">繁体</string>
    <string name="encode">编码</string>
    <string name="charset_ISO_8859_1">ISO_8859_1</string>
    <string name="more">更多</string>
    <string name="eye_protect_mode">护眼模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="lightness">亮度</string>
    <string name="system">系统</string>
    <string name="font_settings">字体设置</string>
</resources>
